--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3"
+    "lint-staged": "^15.4.3",
+    "typescript-eslint": "^8.26.0"
   }
 }
